<resources>
    <string name="app_name">Agricura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agricura Mobile App</string>
    <string name="nav_header_subtitle">agricura@agricura.co.zw</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="single_product_name_tag">PName</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pTitle">User Personalisation</string>
    <string name="txtFullname">Full Name</string>
    <string name="txtMobile">Mobile Number</string>
    <string name="txtEmail">Email Address</string>
    <string name="btnSendDetails">Save Details</string>
    <string name="cropPreferenceType">Crop Preference Type</string>
    <string name="cropType1">Maize</string>
    <string name="cropType2">Sugar Cane</string>
    <string name="cropType3">Soya Beans</string>
    <string name="cropType4">Tobacco</string>
    <string name="cropType5">Tea</string>
    <string name="cropType6">Macademia</string>
    <string name="cropType7">Avocado</string>


    <string-array name="pdfNames">
        <item>Potatoes</item>
        <item>Tomatoes</item>
        <item>Cabbage</item>
        <item>Butternuts</item>
        <item>Paprika</item>
        <item>Wheat</item>
        <item>Water Melons</item>
        <item>Tobacco Lands</item>
        <item>Soya Bean</item>
        <item>Sorghum</item>
        <item>Onion</item>
        <item>Butternuts</item>
        <item>Carrot</item>
        <item>Cotton</item>
        <item>Cucumbers</item>
        <item>Groundnuts</item>
    </string-array>

    <string name="main">climate:</string>
    <string name="city">Harare</string>
    <string name="description">Description:</string>
    <string name="temperature">0.0°c</string>
    <string name="humidity">Humidity:</string>
    <string name="hint">Enter the city name</string>
    <string name="city_key">city_key</string>
    <string name="getLocation">Get Location</string>

    <string name="user_personalisation_to_save_and_update_you_crop_preferences">
        Register your details to enhance your experience with the app
    </string>
    <string name="mobile_number">Mobile number *</string>
    <string name="location">Harare</string>
    <string name="averageTemp">23\'</string>
    <string name="email">Email</string>

    <string name="title_activity_income_statement">IncomeStatementActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="OPEN_WEATHER_MAP_API_KEY">cfd6a2466e0fa66f977fbc7258d451ec</string>

</resources>
