<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".Fragments.MyAccountFragment"
        tools:showIn="@layout/fragment_my_account">


        <!--Put form controls here-->

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:text="@string/pTitle"
            android:textSize="10pt"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="@+id/TextViewCropPreference"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>


        <EditText
            android:id="@+id/EditTextFullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/txtFullname"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewTitle"/>


        <EditText
            android:id="@+id/EditTextMobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/txtMobile"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextFullname"/>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextMobile"/>

        <TextView
            android:id="@+id/TextViewCropPreference"
            android:layout_width="356dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/cropPreferenceType"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"/>


        <Spinner
            android:id="@+id/SpinnerCropType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:entries="@array/croptypelist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextViewCropPreference"/>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="sendDetails"
            android:text="@string/btnSendDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SpinnerCropType"
            app:layout_constraintVertical_bias="0.367"/>

    </android.support.constraint.ConstraintLayout>